--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,32 +1,62 @@
 {
-  "name": "frontend",
+  "name": "datacore-front",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host=localhost",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build-dev": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "watch": "rm -rf ../src/main/resources/static/ && webpack --config webpack.config.js --profile --colors --display-error-details --display-cached -w"
   },
   "dependencies": {
-    "apollo-boost": "^0.4.9",
-    "axios": "^0.27.2",
-    "core-js": "^3.8.3",
-    "graphql": "^15.8.0",
-    "vue": "^2.6.14",
-    "vue-apollo": "^3.1.0",
-    "vue-router": "^3.5.4",
-    "vuetify": "^2.6.7",
-    "vuex": "^3.4.0"
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.3",
+    "vuetify": "^2.6.9",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.1",
+    "@babel/polyfill": "^7.10.4",
+    "@babel/preset-env": "^7.11.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "axios": "^0.20.0",
+    "babel-eslint": "^10.1.0",
+    "cross-env": "^7.0.2",
+    "css-loader": "^4.2.1",
+    "date-fns": "^2.16.1",
+    "element-ui": "^2.15.6",
+    "es6-promise": "^4.2.8",
+    "eslint": "^6.7.2",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "expose-loader": "^1.0.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-webpack-plugin": "^4.3.0",
+    "http-proxy-middleware": "^1.0.5",
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
+    "mini-css-extract-plugin": "^0.10.0",
+    "sass-loader": "^9.0.3",
+    "tree-search": "^1.0.0",
+    "vue-loader": "^15.9.3",
+    "vue-loading-overlay": "^3.4.2",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-jarvis": "^0.3.2",
+    "webpack-merge": "^5.1.2",
+    "webpack-stylish": "^0.1.8"
   },
   "eslintConfig": {
     "root": true,
@@ -38,7 +68,7 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+      "parser": "babel-eslint"
     },
     "rules": {}
   },
