fix: security Role logic and application.yml
Security Role Logic 수정 및 테스트 코드 업데이트
Security Role을 입력 받는 yml파일 내 위치 수정.

--- a/src/main/resources/application-dtonic.yml
+++ b/src/main/resources/application-dtonic.yml
@@ -54,9 +54,12 @@ cityhub:
     logoutUri: http://110.45.181.72:30000/security/logout
     userInfoUri: http://110.45.181.72:30000/security/users
     redirectUri: http://localhost:8099/accesstoken
-    datacoreManagerUrl : http://110.45.181.71:8080
-    securityRole : Dhub_Admin
-
+  security:
+    accessRole:
+      user: Dhub_Admin
+  datacore:
+    manager:
+      url: http://110.45.181.71:8080
 
 http.pool:
   max.total: 200
