--- a/src/main/resources/application-dtonic.yml
+++ b/src/main/resources/application-dtonic.yml
@@ -11,7 +11,7 @@ spring:
 
   datasource:
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://110.45.181.70:5432/postgres?currentSchema=ingest_manager
+    jdbcUrl: jdbc:postgresql://110.45.181.70:5432/postgres?currentSchema=ingest_manager
     username: datacore
     password: datacore
 
