--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 	<description>Ingest Module of D.Hub</description>
 	<properties>
 		<java.version>11</java.version>
+		<maven.test.skip>true</maven.test.skip>
 	</properties>
 	<dependencies>
 		<dependency>
