--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "material-design-icons-iconfont": "^6.7.0",
     "apollo-boost": "^0.4.9",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "graphql": "^15.8.0",
+    "material-design-icons-iconfont": "^6.7.0",
     "vue": "^2.6.14",
     "vue-apollo": "^3.1.0",
+    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.5.4",
     "vuetify": "^2.6.7",
     "vuex": "^3.4.0"
