Feat: Setting Spring NiFi Application Runner
Spring이 구동되는 시점에서 한 차례 실행되는 Application Runner 등록.

아래는 Application Runner에서 Sequential Executed Actions을 정리한 리스트.
[NiFi Action List]
- Collector, Filter, Convertor Template Upload
- NiFi 내 Transmitter 생성 (if Not Found Transmitter)
- Transmitter Stop
- Transmitter Properties update
- Transmitter Start
- NiFi 내 Funnel 생성 (if Not Found Funnel)
- Create Connection Between Funnel and Transmitter

--- a/src/main/resources/application-dtonic.yml
+++ b/src/main/resources/application-dtonic.yml
@@ -60,6 +60,8 @@ cityhub:
   datacore:
     manager:
       url: http://110.45.181.71:8080
+    ingestInterface:
+      url: http://110.45.181.71:8081
 
 http.pool:
   max.total: 200
