--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host=localhost",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build-dev": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "watch": "rm -rf ../src/main/resources/static/ && webpack --config webpack.config.js --profile --colors --display-error-details --display-cached -w"
   },
   "dependencies": {
     "apollo-boost": "^0.4.9",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "cross-env": "^7.0.3",
+    "file-loader": "^6.2.0",
     "graphql": "^15.8.0",
     "material-design-icons-iconfont": "^6.7.0",
     "vue": "^2.6.14",
@@ -22,13 +27,29 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
+    "@babel/eslint-parser": "^7.19.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "css-loader": "^4.2.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "expose-loader": "^1.0.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-webpack-plugin": "^4.3.0",
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
+    "mini-css-extract-plugin": "^0.10.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.3",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-jarvis": "^0.3.2",
+    "webpack-merge": "^5.1.2",
+    "webpack-stylish": "^0.1.8"
   },
   "eslintConfig": {
     "root": true,
