--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "file-loader": "^6.2.0",
     "graphql": "^15.8.0",
     "material-design-icons-iconfont": "^6.7.0",
+    "url-loader": "^4.1.1",
     "vue": "^2.6.14",
     "vue-apollo": "^3.1.0",
     "vue-material": "^1.0.0-beta-15",
