--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,7 @@
   },
   "dependencies": {
     "apollo-boost": "^0.4.9",
-    "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "cross-env": "^7.0.3",
-    "file-loader": "^6.2.0",
     "graphql": "^15.8.0",
     "material-design-icons-iconfont": "^6.7.0",
     "vue": "^2.6.14",
@@ -23,27 +20,44 @@
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.5.4",
     "vuetify": "^2.6.7",
-    "vuex": "^3.4.0"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.1",
+    "@babel/polyfill": "^7.10.4",
     "@babel/eslint-parser": "^7.19.1",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "css-loader": "^4.2.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "@babel/preset-env": "^7.11.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "axios": "^0.20.0",
+    "babel-eslint": "^10.1.0",
+    "cross-env": "^7.0.2",
+    "css-loader": "^4.3.0",
+    "node-sass": "^4.14.1",
+    "date-fns": "^2.16.1",
+    "element-ui": "^2.15.6",
+    "es6-promise": "^4.2.8",
+    "eslint": "^6.7.2",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.2.2",
     "expose-loader": "^1.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^4.3.0",
+    "http-proxy-middleware": "^1.0.5",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "mini-css-extract-plugin": "^0.10.0",
-    "node-sass": "^4.14.1",
     "sass-loader": "^9.0.3",
+    "tree-search": "^1.0.0",
     "vue-loader": "^15.9.3",
-    "vue-template-compiler": "^2.6.14",
+    "vue-loading-overlay": "^3.4.2",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
