--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,6 +48,7 @@ stages:
             steps:
               - task: CopyFiles@2
                 inputs:
-                  SourceFolder: '$(Build.SourcesDirectory)/target'
-                  Contents: '$(AdvancedAnalysisJarFile)'
+                  SourceFolder: '$(Agent.BuildDirectory)/target/**.jar'
+                  #Contents: '$(AdvancedAnalysisJarFile)'
                   TargetFolder: '$(baseFolder)'
+                  Overwrite: true
