--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ stages:
             steps:
               - task: CopyFiles@2
                 inputs:
-                  SourceFolder: '$(Agent.BuildDirectory)/**.jar'
-                  #Contents: '$(AdvancedAnalysisJarFile)'
+                  SourceFolder: '$(Build.SourcesDirectory)/target'
+                  Contents: '**.jar'
                   TargetFolder: '$(baseFolder)'
                   Overwrite: true
