--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,16 @@ stages:
           effectivePomSkip: false
           sonarQubeRunAnalysis: false
         displayName: 'IngestManager Packaging'
+      - task: CopyFiles@2
+        inputs:
+          SourceFolder: '$(Build.SourcesDirectory)/target'
+          Contents: '$(ArtifactId).jar'
+          TargetFolder: '$(Build.ArtifactStagingDirectory)/ingestManager/jars'
+      - task: PublishBuildArtifacts@1
+        inputs:
+          PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+          ArtifactName: 'ingestManager'
+          publishLocation: 'Container'
 
 - stage: TestbedRelease
   #condition: and(succeeded(), eq(variables.isDevelop, true))
@@ -48,7 +58,7 @@ stages:
             steps:
               - task: CopyFiles@2
                 inputs:
-                  SourceFolder: '/azp/agent/_work/7/s/target'
+                  SourceFolder: '$(Agent.BuildDirectory)'
                   Contents: 'd-hub-ingest-module-0.0.1-SNAPSHOT.jar'
                   TargetFolder: '$(baseFolder)'
                   Overwrite: true
