--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,8 +33,8 @@ stages:
       - task: CopyFiles@2
         inputs:
           SourceFolder: '$(Build.SourcesDirectory)/target'
-          Contents: '$(ArtifactId).jar'
-          TargetFolder: '$(Build.ArtifactStagingDirectory)/ingestManager/jars'
+          Contents: '**.jar'
+          TargetFolder: '$(Build.ArtifactStagingDirectory)/jars'
       - task: PublishBuildArtifacts@1
         inputs:
           PathtoPublish: '$(Build.ArtifactStagingDirectory)'
@@ -58,7 +58,7 @@ stages:
             steps:
               - task: CopyFiles@2
                 inputs:
-                  SourceFolder: '$(Agent.BuildDirectory)'
-                  Contents: 'd-hub-ingest-module-0.0.1-SNAPSHOT.jar'
+                  SourceFolder: '$(Agent.BuildDirectory)/ingestManager/jars'
+                  Contents: '$(ArtifactId).jar'
                   TargetFolder: '$(baseFolder)'
                   Overwrite: true
