fix : azure devops pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,4 +67,4 @@ stages:
               - task: CmdLine@2
                 inputs:
                   script: 'chmod +x ./start_ingestManager.sh && sh ./start_ingestManager.sh'
-                  workingDirectory: '$(baseFolder)'
+                  workingDirectory: '$(Agent.BuildDirectory)'
