--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,9 +62,9 @@ stages:
                   workingDirectory: '$(Agent.BuildDirectory)'
               - task: CopyFiles@2
                 inputs:
-                  SourceFolder: '$(Build.SourcesDirectory)/ingestManager/jars'
+                  SourceFolder: '$(Agent.BuildDirectory)/ingestManager/jars'
                   Contents: '**.jar'
-                  TargetFolder: '$(Build.ArtifactStagingDirectory)/ingestManager/jars/docker'
+                  TargetFolder: '$(Agent.BuildDirectory)/ingestManager/jars/docker'
               #- task: CmdLine@2
                 #inputs:
                   #script: 'cp ./ingestManager/jars/d-hub-ingest-module-0.0.1-SNAPSHOT.jar /usr/local/lib/ingestManager/ingestManager'
