--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,9 +71,9 @@ stages:
                   #workingDirectory: '$(Agent.BuildDirectory)'
               - task: CmdLine@2
                 inputs:
-                  script: 'chmod 777 ./start_ingestManager.sh && sh ./start_ingestManager.sh'
+                  script: 'chmod 777 ./ingestManager/jars/start_ingestManager.sh'
                   workingDirectory: '$(Agent.BuildDirectory)'
               - task: CmdLine@2
                 inputs:
-                    script: 'sh ./start_ingestManager.sh'
-                    workingDirectory: '$(Agent.BuildDirectory)'
+                  script: 'sh ./ingestManager/jars/start_ingestManager.sh'
+                  workingDirectory: '$(Agent.BuildDirectory)'
