--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,7 +69,7 @@ stages:
                 #inputs:
                   #script: 'cp ./ingestManager/jars/d-hub-ingest-module-0.0.1-SNAPSHOT.jar /usr/local/lib/ingestManager/ingestManager'
                   #workingDirectory: '$(Agent.BuildDirectory)'
-                  #
+                  #test
               - task: CmdLine@2
                 inputs:
                   script: 'chmod 777 ./ingestManager/jars/start_ingestManager.sh'
