--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,8 @@
   "devDependencies": {
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.11.1",
-    "@babel/polyfill": "^7.10.4",
     "@babel/eslint-parser": "^7.19.1",
+    "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
@@ -36,7 +36,6 @@
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^4.3.0",
-    "node-sass": "^4.14.1",
     "date-fns": "^2.16.1",
     "element-ui": "^2.15.6",
     "es6-promise": "^4.2.8",
@@ -48,12 +47,14 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
     "expose-loader": "^1.0.0",
+    "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^4.3.0",
     "http-proxy-middleware": "^1.0.5",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "mini-css-extract-plugin": "^0.10.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^9.0.3",
     "tree-search": "^1.0.0",
     "vue-loader": "^15.9.3",
