--- a/src/main/resources/application-dtonic.yml
+++ b/src/main/resources/application-dtonic.yml
@@ -12,7 +12,7 @@ spring:
     cache: false
 
   security:
-    enabled: false
+    enabled: true
 
   datasource:
     driverClassName: org.postgresql.Driver
@@ -51,8 +51,8 @@ datacore:
 
 cityhub:
   client:
-    clientId: 2xRRu4I8qBYEmEyjrRDl
-    clientSecret: DX6L2CPECwTFPyhe93DJ04AbzqgXaRur	
+    clientId: JfZssZQAPUig5AO48kKK
+    clientSecret: umb2rX64PXQz03KOFJDKuDq17vDruOjU
     userAuthorizationUri: http://110.45.181.72:30000/oauth2.0/authorize
     accessTokenUri: http://110.45.181.72:30000/oauth2.0/token
     publicKeyUri: http://110.45.181.72:30000/security/publickey
