--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-boost": "^0.4.9",
     "core-js": "^3.8.3",
+    "cron-expression-validator": "^1.0.20",
     "graphql": "^15.8.0",
     "material-design-icons-iconfont": "^6.7.0",
     "url-loader": "^4.1.1",
