--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,19 +1,23 @@
+application:
+  title: D.Hub-Ingest-Manager
+  version: 1.0.0
+
 spring:
   application:
-    name: dh-datacore-ui
+    name: dh-ingest-manager
 
   thymeleaf:
     prefix: classpath:/static/
     cache: false
 
   security:
-    enabled: true
+    enabled: false
 
   datasource:
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://110.45.181.70:5432/ingestmanager
-    username: datacore
-    password: datacore
+    jdbcUrl: jdbc:postgresql://localhost:5432/ingestmanager?currentSchema=ingest_manager
+    username: postgres
+    password: postgres
 
     retrieve:
       use.yn: N
@@ -21,6 +25,7 @@ spring:
       url: jdbc:postgresql://10.12.0.11:5432/datacore
       username: keti_datacore
       password: keti123
+
 server:
   port: 8099
   servlet:
@@ -54,6 +59,14 @@ cityhub:
     logoutUri: http://110.45.181.72:30000/security/logout
     userInfoUri: http://110.45.181.72:30000/security/users
     redirectUri: http://localhost:8099/accesstoken
+  security:
+    accessRole:
+      user: Dhub_Admin
+  datacore:
+    manager:
+      url: http://110.45.181.71:8080
+    ingestInterface:
+      url: http://110.45.181.71:8081
 
 http.pool:
   max.total: 200
@@ -62,3 +75,8 @@ http.pool:
   connection.request.timeout: 5000
   read.timeout: 10000
   validate.after.inactivity: 2000
+
+nifi:
+  url: https://localhost:8443
+  user: admin
+  password: ctsBtRBKHRAx69EqUghvvgEvjnaLjFEB
