--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,7 +18,13 @@ spring:
     jdbcUrl: jdbc:postgresql://localhost:5432/ingestmanager?currentSchema=ingest_manager
     username: postgres
     password: postgres
-
+    logging:
+      use.yn: Y
+      moduleName: ingest_manager
+      driverClassName: org.postgresql.Driver
+      jdbcUrl: jdbc:postgresql://localhost:5432/ingestmanager?currentSchema=logging
+      username: postgres
+      password: postgres
     retrieve:
       use.yn: N
       driverClassName: org.postgresql.Driver
@@ -31,6 +37,8 @@ server:
   servlet:
     context-path: /
     session.timeout: 60m
+  tomcat:
+    remote-ip-header: x-forwarded-for
 
 ## Logging
 logging.config: classpath:logback-spring.xml
