Feat : Test 후 Logging Completed

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -59,8 +59,8 @@ datacore:
 
 cityhub:
   client:
-    clientId: M0A5IDgkNecDjm994BNl
-    clientSecret: TyJ0RLZUHDhoVl7FNGJnkb8pLv2v1Ka7
+    clientId: qti7lRjyOa44u4Vb6tIp
+    clientSecret: 8bhv1xIyH76NiDaXgU8agc31YTUd9g7g
     userAuthorizationUri: http://110.45.181.72:30000/oauth2.0/authorize
     accessTokenUri: http://110.45.181.72:30000/oauth2.0/token
     publicKeyUri: http://110.45.181.72:30000/security/publickey
@@ -69,7 +69,8 @@ cityhub:
     redirectUri: http://localhost:8099/accesstoken
   security:
     accessRole:
-      user: Dhub_Admin
+      user: Dhub_User
+    
   datacore:
     manager:
       url: http://110.45.181.71:8080
