--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,7 +11,7 @@ spring:
     cache: false
 
   security:
-    enabled: true
+    enabled: false
 
   datasource:
     driverClassName: org.postgresql.Driver
@@ -19,7 +19,7 @@ spring:
     username: postgres
     password: postgres
     logging:
-      use.yn: Y
+      use.yn: N
       moduleName: ingest_manager
       driverClassName: org.postgresql.Driver
       jdbcUrl: jdbc:postgresql://localhost:5432/ingestmanager?currentSchema=logging
@@ -39,6 +39,11 @@ server:
     session.timeout: 60m
   tomcat:
     remote-ip-header: x-forwarded-for
+  ssl:
+    enabled: true
+    key-store: classpath:keystore.jks
+    key-store-type: JKS
+    key-store-password: u9989z
 
 ## Logging
 logging.config: classpath:logback-spring.xml
