--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,7 +61,7 @@ stages:
                 inputs:
                   script: 'chmod 777 ./ingestManager/jars/d-hub-ingest-module-0.0.1-SNAPSHOT.jar'
                   workingDirectory: '$(Agent.BuildDirectory)'
-              #- task: CopyFiles@2
+              ##- task: CopyFiles@2
                # inputs:
                 #  SourceFolder: '$(Agent.BuildDirectory)/ingestManager/jars'
                  # Contents: '**.jar'
