--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,16 +65,11 @@ stages:
                 #  SourceFolder: '$(Agent.BuildDirectory)/ingestManager/jars'
                  # Contents: '**.jar'
                   #TargetFolder: '$(Agent.BuildDirectory)/ingestManager/jars/docker'
-              #- task: CmdLine@2
-                #inputs:
-                  #script: 'cp ./ingestManager/jars/d-hub-ingest-module-0.0.1-SNAPSHOT.jar /usr/local/lib/ingestManager/ingestManager'
-                  #workingDirectory: '$(Agent.BuildDirectory)'
-                  #test
-              #- task: CmdLine@2
-                #inputs:
-                  #script: 'chmod 777 ./ingestManager/jars/start_ingestManager.sh'
-                  #workingDirectory: '$(Agent.BuildDirectory)'
-              #- task: CmdLine@2
-                #inputs:
-                  #script: 'sh ./ingestManager/jars/start_ingestManager.sh'
-                  #workingDirectory: '$(Agent.BuildDirectory)'
+              - task: CmdLine@2
+                inputs:
+                  script: 'chmod 771 ./ingestManager/deploy.sh'
+                  workingDirectory: '$(Agent.BuildDirectory)'
+              - task: CmdLine@2
+                inputs:
+                  script: 'sh ./ingestManager/deploy.sh'
+                  workingDirectory: '$(Agent.BuildDirectory)'
