--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,12 +1,10 @@
 # see: https://docs.microsoft.com/en-us/azure/devops/pipelines/ecosystems/deploy-linux-vm?view=azure-devops&tabs=java
 variables:
-  isRelease: "$[startsWith(variables['Build.SourceBranch'], 'refs/heads/release/1.0.0')]"
-  isDevelop: "$[eq(variables['Build.SourceBranch'], 'refs/heads/develop')]"
-  deployDir: "/home/azure-deploy-agent/test"
+  #isRelease: "$[startsWith(variables['Build.SourceBranch'], 'refs/heads/release/1.0.0')]"
+  #isDevelop: "$[eq(variables['Build.SourceBranch'], 'refs/heads/develop')]"
 
 trigger:
   - develop
-  - release/1.0.0
 # build agent pool default가 dtonic꺼
 # see: https://dev.azure.com/dtonic/_settings/agentpools
 pool:
@@ -14,7 +12,6 @@ pool:
 # develop branch build
 stages: 
 - stage: AdvancedDevelopIngestManagerService
-  condition: and(succeeded(), eq(variables.isDevelop, true))
   displayName: Build advanced develop ingestManager service
   jobs:
     - job: build
@@ -42,41 +39,12 @@ stages:
 
 # develop branch publish
 - stage: DevelopbedRelease
-  condition: and(succeeded(), eq(variables.isDevelop, true))
+  #condition: and(succeeded(), eq(variables.isDevelop, true))
   jobs:
     - deployment: IngestManager_Dev_123Server
       # 배포할 Envornment
       environment:
         name: "Develop_ENV_123server"
-        resourceType: VirtualMachine
-      variables:
-        baseFolder: /usr/local/lib/ingestManager
-        AdvancedAnalysisJarFile: $[ stageDependencies.AdvancedAnalysisService.build.outputs['buildResult.jarFileName'] ]
-      strategy:
-        runOnce:
-          deploy:
-            steps:
-              - task: CmdLine@2
-                inputs:
-                  script: 'mv ./ingestManager/jars/d-hub-ingest-module-0.0.1-SNAPSHOT.jar /jars/d-hub-ingest-module-0.0.1-SNAPSHOT.jar'
-                  workingDirectory: '$(Agent.BuildDirectory)'
-              - task: CmdLine@2
-                inputs:
-                  script: 'chmod 771 /azp/agent/deploy.sh'
-                  workingDirectory: '$(Agent.BuildDirectory)'
-              - task: CmdLine@2
-                inputs:
-                  script: 'sh /azp/agent/deploy.sh'
-                  workingDirectory: '$(Agent.BuildDirectory)'
-
-# release branch publish
-- stage: ReleasebedRelease
-  condition: and(succeeded(), eq(variables.isRelease, true))
-  jobs:
-    - deployment: IngestManager_Dev_123Server
-      # 배포할 Envornment
-      environment:
-        name: "Release_ENV_122server_IngestManager"
         resourceType: VirtualMachine
       variables:
         baseFolder: /usr/local/lib/ingestManager
