--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,7 @@
 # see: https://docs.microsoft.com/en-us/azure/devops/pipelines/ecosystems/deploy-linux-vm?view=azure-devops&tabs=java
 variables:
   #isRelease: "$[startsWith(variables['Build.SourceBranch'], 'refs/heads/release/1.0.0')]"
-  #isDevelop: "$[eq(variables['Build.SourceBranch'], 'refs/heads/develop')]"
+  isDevelop: "$[eq(variables['Build.SourceBranch'], 'refs/heads/develop')]"
 
 trigger:
   - develop
