--- a/docker/develop/docker-compose-dev.yml
+++ b/docker/develop/docker-compose-dev.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   ingestmanager:
     build:
-      context: ./ingestManager
+      context: ./
     ports:
       - 8094:8099
     environment:
