--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,9 +63,9 @@ stages:
                   workingDirectory: '$(Agent.BuildDirectory)'
               - task: CmdLine@2
                 inputs:
-                  script: 'chmod 771 /azp/agent/deploy.sh'
+                  script: 'chmod 771 /pipeline/deploy.sh'
                   workingDirectory: '$(Agent.BuildDirectory)'
               - task: CmdLine@2
                 inputs:
-                  script: 'sh /azp/agent/deploy.sh'
+                  script: 'sh /pipeline/deploy.sh'
                   workingDirectory: '$(Agent.BuildDirectory)'
