--- a/docker/develop/application-dev.yml
+++ b/docker/develop/application-dev.yml
@@ -32,7 +32,7 @@ server:
     session.timeout: 60m
 
 ## Logging
-logging.config: logback-spring.xml
+logging.config: logback-spring-dev.xml
 logging.base.dir: logs
 
 # HTTP retrieve
