fix, refactor : 에러 수정 및 코드 개선 - Root Key 에러 수정 - Null 데이터 정상 처리 - NiFi Convertor 코드 개선

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 application:
   title: D.Hub-Ingest-Manager
-  version: 1.0.0
+  version: 1.1.2
 
 spring:
   application:
@@ -15,7 +15,7 @@ spring:
 
   datasource:
     driverClassName: org.postgresql.Driver
-    jdbcUrl: jdbc:postgresql://localhost:5432/ingestmanager?currentSchema=ingest_manager
+    jdbcUrl: jdbc:postgresql://localhost:5432/dhub?currentSchema=ingest_manager
     username: postgres
     password: postgres
     logging:
