--- a/src/main/resources/application-dtonic.yml
+++ b/src/main/resources/application-dtonic.yml
@@ -1,6 +1,6 @@
 application:
   title: D.Hub-Ingest-Manager
-  version: 1.0.0
+  version: 1.1.2
 
 spring:
   application:
@@ -20,7 +20,7 @@ spring:
     username: datacore
     password: datacore
     logging:
-      use.yn: Y
+      use.yn: N
       moduleName: ingest_manager
       driverClassName: org.postgresql.Driver
       jdbcUrl: jdbc:postgresql://localhost:5432/ingestmanager?currentSchema=logging
