--- a/src/main/resources/application-dtonic.yml
+++ b/src/main/resources/application-dtonic.yml
@@ -19,19 +19,7 @@ spring:
     jdbcUrl: jdbc:postgresql://110.45.181.70:5432/postgres?currentSchema=ingest_manager
     username: datacore
     password: datacore
-    logging:
-      use.yn: N
-      moduleName: ingest_manager
-      driverClassName: org.postgresql.Driver
-      jdbcUrl: jdbc:postgresql://localhost:5432/ingestmanager?currentSchema=logging
-      username: postgres
-      password: postgres
-    retrieve:
-      use.yn: N
-      driverClassName: org.postgresql.Driver
-      url: jdbc:postgresql://10.12.0.11:5432/datacore
-      username: keti_datacore
-      password: keti123
+
 server:
   port: 8099
   servlet:
@@ -93,3 +81,6 @@ nifi:
   url: https://110.45.181.71:8443
   user: admin
   password: ctsBtRBKHRAx69EqUghvvgEvjnaLjFEB
+  version: 1.23.0
+  template:
+    init: false
