--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>io.dtonic</groupId>
 	<artifactId>d-hub-ingest-module</artifactId>
-	<version>1.1.3</version>
+	<version>1.2.0-alpha</version>
 	<name>d-hub-ingest-module</name>
 	<description>Ingest Module of D.Hub</description>
 	<properties>
