--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "apollo-boost": "^0.4.9",
+    "autoprefixer": "^9.8.8",
     "core-js": "^3.8.3",
     "cron-expression-validator": "^1.0.20",
     "graphql": "^15.8.0",
     "material-design-icons-iconfont": "^6.7.0",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "url-loader": "^4.1.1",
     "vue": "^2.6.14",
     "vue-apollo": "^3.1.0",
