logback.xml 볼륨 구성

--- a/docker/develop/application-dev.yml
+++ b/docker/develop/application-dev.yml
@@ -42,9 +42,8 @@ server:
     key-store-password: srd5wjn9
 
 ## Logging
-logging.config: logback-spring-dev.xml
+logging.config: file:///logback-spring-rel.xml
 logging.base.dir: logs
-
 # HTTP retrieve
 datacore:
   http:
