--- a/docker/release/application-rel.yml
+++ b/docker/release/application-rel.yml
@@ -1,24 +1,20 @@
 application:
   title: D.Hub-Ingest-Manager
-  version: 1.0.0
+  version: 1.1.3
 
 spring:
   application:
     name: dh-ingest-manager
 
-
   thymeleaf:
     prefix: classpath:/static/
     cache: false
 
-  security:
-    enabled: false
-
   datasource:
     driverClassName: org.postgresql.Driver
-    jdbcUrl: jdbc:postgresql://110.45.181.70:5432/postgres?currentSchema=ingest_manager
-    username: datacore
-    password: datacore
+    jdbcUrl: jdbc:postgresql://postgis4:5432/smart_city?currentSchema=ingest_manager
+    username: postgres
+    password: postgres
     logging:
       use.yn: N
       moduleName: ingest_manager
@@ -32,16 +28,22 @@ spring:
       url: jdbc:postgresql://10.12.0.11:5432/datacore
       username: keti_datacore
       password: keti123
+
 server:
   port: 8099
   servlet:
     context-path: /
     session.timeout: 60m
+  tomcat:
+    remote-ip-header: x-forwarded-for
+  ssl:
+    key-store: file:///keystore.jks
+    key-store-type: JKS
+    key-store-password: srd5wjn9
 
 ## Logging
 logging.config: file:///logback-spring-rel.xml
 logging.base.dir: logs
-
 # HTTP retrieve
 datacore:
   http:
@@ -56,23 +58,9 @@ datacore:
           level: 3
 
 cityhub:
-  client:
-    clientId: JfZssZQAPUig5AO48kKK
-    clientSecret: umb2rX64PXQz03KOFJDKuDq17vDruOjU
-    userAuthorizationUri: http://110.45.181.72:30000/oauth2.0/authorize
-    accessTokenUri: http://110.45.181.72:30000/oauth2.0/token
-    publicKeyUri: http://110.45.181.72:30000/security/publickey
-    logoutUri: http://110.45.181.72:30000/security/logout
-    userInfoUri: http://110.45.181.72:30000/security/users
-    redirectUri: http://localhost:8099/accesstoken
   security:
     accessRole:
       user: Dhub_User
-  datacore:
-    manager:
-      url: http://110.45.181.71:8080
-    ingestInterface:
-      url: http://110.45.181.71:8081
 
 http.pool:
   max.total: 200
@@ -81,8 +69,3 @@ http.pool:
   connection.request.timeout: 5000
   read.timeout: 10000
   validate.after.inactivity: 2000
-
-nifi:
-  url: https://110.45.181.71:8443
-  user: admin
-  password: ctsBtRBKHRAx69EqUghvvgEvjnaLjFEB
